<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>net.sf.jett</groupId>
        <artifactId>jett</artifactId>
        <version>0.11.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>jett-core</artifactId>
    <packaging>jar</packaging>
    <version>0.11.1-SNAPSHOT</version>

    <name>jett-core</name>
    <url>http://jett.sourceforge.net</url>
    <description>
        JETT is a Java API that reads an Excel spreadsheet as a template, takes your data, and
        creates a new Excel spreadsheet that contains your data, formatted as in the template. It
        works with .xls and .xlsx template spreadsheets.
    </description>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>net.sf.jagg</groupId>
            <artifactId>jagg-core</artifactId>
            <version>0.9.0</version>
        </dependency>
        <dependency>
            <artifactId>poi</artifactId>
            <groupId>org.apache.poi</groupId>
            <version>5.1.0</version>
        </dependency>
        <dependency>
            <artifactId>poi-ooxml</artifactId>
            <groupId>org.apache.poi</groupId>
            <version>5.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-jexl</artifactId>
            <version>2.1.1</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>1.8.0.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.17.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-jcl</artifactId>
            <version>2.17.1</version>
        </dependency>
    </dependencies>
</project>